--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1,10 +1,7 @@
 html {
     box-sizing: border-box;
     height: 100vh;
-  }
-// font-family: 'DM Serif Display', serif;
-// font-family: 'Lato', sans-serif;
-// font-family: 'Roboto Mono', monospace;
+}
 
 * {
     font-family: 'Lato', sans-serif;
@@ -15,6 +12,8 @@ body {
     color:#000;
   }
 
+//////////////////////// DIRECTORY ////////////////////////
+
 #start {
     padding-left: 30px;
     padding-top: 10px;
@@ -22,22 +21,36 @@ body {
 
 .wrapper {
     padding: 30px;
-    // padding-left: 50px;
 }
 
 .top {
+    margin: 0px;
+    display: contents;
     font-size: 2rem;
     font-weight: 300;
+    width: 300px;
+}
+
+.top p {
+    width: 300px;
+    margin: 0 !important;
+    margin-block-end: 0 !important;
+    margin-block-start: 0 !important;
 }
 
 #start-directory {
+    top: 153px;
+    display: inline-block;
     margin-top: 65px;
     height: 400px;
+    width: 550px;
+    margin-right: 0;
 }
 
 .about{
     display: block;
     text-align: left; 
+    top: 153px;
     position: absolute;
     font-size: 5rem;
     font-weight: 900;
@@ -126,9 +139,35 @@ body {
     width: 100%;
 }
 
+//////////////////////// CONTENT ////////////////////////
+
+#content-box {
+    display: flex;
+    flex-direction: column;
+    height: 630px;
+    width: 670px;
+    float: right;
+    border: 1px solid black;
+    overflow-y: scroll;
+    scroll-snap-type: y mandatory; 
+    
+}
+
+.slide {
+    width: 100%;
+    flex-shrink: 0;
+    height: 100%;
+    scroll-behavior: smooth;
+    scroll-snap-align: start;
+}
+
+//////////////////////// FOOTER ////////////////////////
+
 #start-icons {
+    display: inline-block;
     margin-top: 60px;
     font-size: 1.5rem;
+    width: 500px;
 }
 
 .fas {
