--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -40,7 +40,7 @@ body {
 
 #start-directory {
     top: 153px;
-    display: inline-block;
+    float: left;
     margin-top: 65px;
     height: 400px;
     width: 550px;
@@ -142,11 +142,10 @@ body {
 //////////////////////// CONTENT ////////////////////////
 
 #content-box {
-    display: flex;
+    display: inline-block;
     flex-direction: column;
     height: 630px;
-    width: 670px;
-    float: right;
+    min-width: 660px;
     border: 1px solid black;
     overflow-y: scroll;
     scroll-snap-type: y mandatory; 
@@ -158,12 +157,17 @@ body {
     height: 100%;
     scroll-behavior: smooth;
     scroll-snap-align: start;
+    text-align: center;
+}
+
+.slides > div:target {
+    transform: scale(0.8);
 }
 
 //////////////////////// FOOTER ////////////////////////
 
 #start-icons {
-    display: inline-block;
+    float: left;
     margin-top: 60px;
     font-size: 1.5rem;
     width: 500px;
