--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -5,6 +5,7 @@ html {
 
 * {
     font-family: 'Lato', sans-serif;
+    text-align: left;
 }
 
 body {
@@ -42,7 +43,7 @@ body {
     top: 153px;
     float: left;
     margin-top: 65px;
-    height: 400px;
+    height: 450px;
     width: 550px;
     margin-right: 0;
 }
@@ -145,32 +146,31 @@ body {
     display: inline-block;
     flex-direction: column;
     height: 630px;
-    min-width: 660px;
-    border: 1px solid black;
+    min-width: 650px;
+    max-width: 650px;
+    margin-left: 10px;
+    // border: 1px solid black;
     overflow-y: scroll;
-    scroll-snap-type: y mandatory; 
 }
 
 .slide {
     width: 100%;
     flex-shrink: 0;
     height: 100%;
+    padding: 40px 20px 40px 20px;
     scroll-behavior: smooth;
-    scroll-snap-align: start;
     text-align: center;
+    font-weight: 100;
 }
 
-.slides > div:target {
-    transform: scale(0.8);
-}
 
 //////////////////////// FOOTER ////////////////////////
 
 #start-icons {
     float: left;
-    margin-top: 60px;
+    position: absolute;
     font-size: 1.5rem;
-    width: 500px;
+    width: 550px;
 }
 
 .fas {
