--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -162,11 +162,15 @@ body {
   width: 100%;
   -ms-flex-negative: 0;
       flex-shrink: 0;
-  height: 100%;
+  height: 120%;
   padding: 40px 20px 40px 20px;
   scroll-behavior: smooth;
   text-align: center;
   font-weight: 100;
+}
+
+.slide h3 {
+  font-weight: 900;
 }
 
 #start-icons {
@@ -176,15 +180,15 @@ body {
   width: 550px;
 }
 
-.fas {
+#start-icons .fas {
   margin: 12px;
 }
 
-.fab {
+#start-icons .fab {
   margin: 10px;
 }
 
-a {
+#start-icons a {
   text-decoration: none;
   color: #000;
 }
