--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -156,11 +156,15 @@ body {
 .slide {
     width: 100%;
     flex-shrink: 0;
-    height: 100%;
+    height: 120%;
     padding: 40px 20px 40px 20px;
     scroll-behavior: smooth;
     text-align: center;
     font-weight: 100;
+}
+
+.slide h3 {
+    font-weight: 900;
 }
 
 
@@ -173,15 +177,15 @@ body {
     width: 550px;
 }
 
-.fas {
+#start-icons .fas {
     margin: 12px;
 }
 
-.fab {
+#start-icons .fab {
     margin: 10px
 }
 
-a {
+#start-icons a {
     text-decoration: none;
     color: #000;
 }
