--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -168,6 +168,33 @@ body {
 }
 
 
+.slide div {
+    width: 33%;
+    display: inline-block;
+    font-size: 1rem;
+    font-weight: 400;
+}
+
+.info {
+    font-style: italic;
+    text-align: left;
+    float: left;
+}
+
+.location {
+    font-style: italic;
+    text-align: center;
+}
+
+.year {
+    font-style: italic;
+    text-align: right;
+    float: right;
+}
+
+
+
+
 //////////////////////// FOOTER ////////////////////////
 
 #start-icons {
