--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -43,18 +43,17 @@ body {
 #start-directory {
   top: 153px;
   float: left;
-  margin-top: 65px;
   height: 450px;
-  width: 550px;
+  width: 450px;
   margin-right: 0;
 }
 
 .about {
   display: block;
   text-align: left;
-  top: 153px;
+  top: 160px;
   position: absolute;
-  font-size: 5rem;
+  font-size: 4rem;
   font-weight: 900;
   color: gray;
 }
@@ -78,7 +77,7 @@ body {
   text-align: left;
   top: 250px;
   position: absolute;
-  font-size: 5rem;
+  font-size: 4rem;
   font-weight: 900;
   color: gray;
 }
@@ -100,9 +99,9 @@ body {
 .employment {
   display: block;
   text-align: left;
-  top: 352px;
+  top: 340px;
   position: absolute;
-  font-size: 5rem;
+  font-size: 4rem;
   font-weight: 900;
   color: gray;
 }
@@ -124,9 +123,9 @@ body {
 .education {
   display: block;
   text-align: left;
-  top: 458px;
+  top: 435px;
   position: absolute;
-  font-size: 5rem;
+  font-size: 4rem;
   font-weight: 900;
   color: gray;
 }
@@ -151,9 +150,9 @@ body {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  height: 630px;
-  min-width: 650px;
-  max-width: 650px;
+  height: 631px;
+  min-width: 670px;
+  max-width: 670px;
   margin-left: 10px;
   overflow-y: scroll;
 }
@@ -162,7 +161,7 @@ body {
   width: 100%;
   -ms-flex-negative: 0;
       flex-shrink: 0;
-  height: 120%;
+  height: 100%;
   padding: 40px 20px 40px 20px;
   scroll-behavior: smooth;
   text-align: center;
@@ -197,11 +196,30 @@ body {
   float: right;
 }
 
+.ab {
+  display: inline-block;
+  width: 300px;
+  margin: 0;
+}
+
+.ab a {
+  color: black;
+}
+
+.margin {
+  margin-top: 20px;
+}
+
+#education-content p {
+  margin-top: 10px;
+}
+
 #start-icons {
   float: left;
   position: absolute;
   font-size: 1.5rem;
-  width: 550px;
+  width: 450px;
+  margin-top: 490px;
 }
 
 #start-icons .fas {
