--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -42,18 +42,17 @@ body {
 #start-directory {
     top: 153px;
     float: left;
-    margin-top: 65px;
     height: 450px;
-    width: 550px;
+    width: 450px;
     margin-right: 0;
 }
 
 .about{
     display: block;
     text-align: left; 
-    top: 153px;
+    top: 160px;
     position: absolute;
-    font-size: 5rem;
+    font-size: 4rem;
     font-weight: 900;
     color: gray;
 }
@@ -76,7 +75,7 @@ body {
     text-align: left; 
     top: 250px;
     position: absolute;
-    font-size: 5rem;
+    font-size: 4rem;
     font-weight: 900;
     color: gray;
 }
@@ -97,9 +96,9 @@ body {
 .employment{
     display: block;
     text-align: left; 
-    top: 352px;
+    top: 340px;
     position: absolute;
-    font-size: 5rem;
+    font-size: 4rem;
     font-weight: 900;
     color: gray;
 }
@@ -120,9 +119,9 @@ body {
 .education{
     display: block;
     text-align: left; 
-    top: 458px;
+    top: 435px;
     position: absolute;
-    font-size: 5rem;
+    font-size: 4rem;
     font-weight: 900;
     color: gray;
 }
@@ -145,9 +144,9 @@ body {
 #content-box {
     display: inline-block;
     flex-direction: column;
-    height: 630px;
-    min-width: 650px;
-    max-width: 650px;
+    height: 631px;
+    min-width: 670px;
+    max-width: 670px;
     margin-left: 10px;
     // border: 1px solid black;
     overflow-y: scroll;
@@ -156,7 +155,7 @@ body {
 .slide {
     width: 100%;
     flex-shrink: 0;
-    height: 120%;
+    height: 100%;
     padding: 40px 20px 40px 20px;
     scroll-behavior: smooth;
     text-align: center;
@@ -192,7 +191,23 @@ body {
     float: right;
 }
 
+.ab {
+    display: inline-block;
+    width: 300px;
+    margin: 0;
+}
 
+.ab a {
+    color: black;
+}
+
+.margin {
+    margin-top: 20px;
+}
+
+#education-content p {
+    margin-top: 10px;
+}
 
 
 //////////////////////// FOOTER ////////////////////////
@@ -201,7 +216,8 @@ body {
     float: left;
     position: absolute;
     font-size: 1.5rem;
-    width: 550px;
+    width: 450px;
+    margin-top: 490px;
 }
 
 #start-icons .fas {
