--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -49,7 +49,7 @@ body {
 #profile-picture {
   display: inline-block;
   vertical-align: bottom;
-  width: 200px;
+  width: 15%;
   height: 200px;
   background-color: beige;
   margin-top: 4.8%;
@@ -185,7 +185,6 @@ body {
   vertical-align: top;
   height: 68%;
   width: 60%;
-  margin-left: 0.7%;
   overflow-y: scroll;
 }
 
