--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -50,7 +50,7 @@ body {
 #profile-picture {
     display: inline-block;
     vertical-align: bottom;
-    width: 200px;
+    width: 15%;
     height: 200px;
     background-color: beige;
     // border-radius: 50%;
@@ -186,7 +186,7 @@ body {
     vertical-align: top;
     height: 68%;
     width: 60%;
-    margin-left: 0.7%;
+    // margin-left: 0.7%;
     overflow-y: scroll;
 }
 
