--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -66,7 +66,8 @@ body {
 
 #profile-intro {
     display: inline-block;
-    margin-left: 7.1%;
+    margin-top: 4.8%;
+    float: right;
     width: 75%;
     height: 200px;
     vertical-align: bottom;
