--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -25,7 +25,7 @@ body {
     
     #start {
         display: flexbox;
-        width: 95%;
+        width: 420px;
         height: 100%;
         margin: auto;
     }
