more small changes

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,6 +13,10 @@ body {
   color: #000;
 }
 
+#about-container ul li {
+  white-space: normal;
+}
+
 @media only screen and (max-width: 600px) {
   * {
     overflow: visible;
@@ -258,7 +262,7 @@ body {
     width: 100%;
   }
   #start {
-    width: 600px;
+    width: 590px;
     height: 100%;
     margin: auto;
   }
@@ -297,7 +301,7 @@ body {
     vertical-align: top;
     width: 70%;
     height: 150px;
-    margin: 4.8% auto 0 auto;
+    margin: 4% auto 0 auto;
   }
   .hi {
     display: block;
@@ -366,8 +370,8 @@ body {
   }
   #about-container ul {
     margin: 1% 0;
-    -webkit-padding-start: 7%;
-            padding-inline-start: 7%;
+    -webkit-padding-start: 5%;
+            padding-inline-start: 5%;
   }
   #about-container ul li {
     font-weight: 100;
@@ -547,7 +551,7 @@ body {
     float: right;
     vertical-align: top;
     width: 70%;
-    margin: 4.8% auto 2% auto;
+    margin: 4.8% auto 1% auto;
   }
   .hi {
     display: block;
@@ -613,8 +617,8 @@ body {
   }
   #about-container ul {
     margin: 1% 0;
-    -webkit-padding-start: 7%;
-            padding-inline-start: 7%;
+    -webkit-padding-start: 5%;
+            padding-inline-start: 5%;
   }
   #about-container ul li {
     font-weight: 100;
@@ -988,8 +992,8 @@ body {
   }
   .slide-block ul {
     margin: 4% 0 4% 0;
-    -webkit-padding-start: 7%;
-            padding-inline-start: 7%;
+    -webkit-padding-start: 5%;
+            padding-inline-start: 5%;
   }
   .slide-block ul li {
     font-size: 1rem;
