--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1047,5 +1047,8 @@ body {
     display: block;
     margin-top: 30px;
   }
+  #education-content {
+    height: 95%;
+  }
 }
 /*# sourceMappingURL=style.css.map */
