--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1755,7 +1755,7 @@ body {
     .skills {
         height: 100%;
         width: 30%;
-        padding: 15px;
+        padding: 20px 15px;
         border: 1px solid #eee;
         border-radius: 12px;
     }
