--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -188,6 +188,10 @@ body {
         height: auto;
     }
     
+    .last {
+        height: 945px;
+    }
+    
     .content-wrapper {
         display: block;
         margin: auto;
@@ -684,6 +688,10 @@ body {
         height: auto;
     }
 
+    .last {
+        height: 945px;
+    }
+
     .content-wrapper {
         display: block;
         margin: auto;
@@ -1175,6 +1183,10 @@ body {
         height: 938px;
     }
 
+    .last {
+        height: 945px;
+    }
+
     .content-wrapper {
         display: block;
         margin: auto;
@@ -1657,6 +1669,10 @@ body {
 
     .page-section {
         height: 938px;
+    }
+
+    .last {
+        height: 945px;
     }
 
     .content-wrapper {
