--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -191,7 +191,7 @@ body {
     .last {
         height: 945px;
     }
-    
+
     .content-wrapper {
         display: block;
         margin: auto;
@@ -1567,6 +1567,7 @@ body {
         width: 190px;
         height: 50px;
         border: 2px solid white;
+        border-radius: 6px;
         margin: auto;
         color: white;
         text-align: center;
@@ -1688,7 +1689,8 @@ body {
         font-size: 2.7rem;
         font-weight: 700;
         text-align: center;
-        color: rgb(255, 31, 115);
+        color: #0F2027;
+        margin-bottom: 25px;
     }
 
 
@@ -1720,7 +1722,7 @@ body {
         object-fit: contain;
         height: 280px;
         width: auto;
-        border-radius: 12px;
+        border-radius: 6px;
         display: block;
     }
 
@@ -1771,16 +1773,21 @@ body {
     .skills {
         height: 100%;
         width: 30%;
-        padding: 20px 15px;
-        border: 1px solid #eee;
-        border-radius: 12px;
+        padding: 25px;
+        border: 1px solid #e1e1e1;
+        border-radius: 6px;
     }
 
     .skills div {
-        font-size: 1.2rem;
+        font-family: 'Lato', sans-serif;
+        font-size: 1.3rem;
         margin-bottom: 25px;
-        font-weight: 700;
+        font-weight: 500;
         // color: rgb(255, 31, 115);
+    }
+
+    .skills ul {
+        padding-inline-start: 5%;
     }
 
     .skills ul li {
@@ -1973,14 +1980,39 @@ body {
     }
 
     .projects-container {
-        margin-top: 20px;
-        max-width: 100%;
-        height: 600px;
-        padding: 15px 35px;
-        border: solid 0.5px #e1e1e1;
+        // margin-top: 20px;
+        // max-width: 100%;
+        // height: 600px;
+        // padding: 15px 35px;
+        // border: solid 0.5px #e1e1e1;
+        // border-radius: 6px;
+        // text-align: left;
+        // overflow: scroll;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        flex-wrap: wrap;
+        width: 100%;
+        height: 100%;
+    }
+
+    .project-wrap {
+        display: block;
+        width: 32%;
+        height: 47%;
+        border: 1px solid #e1e1e1;
         border-radius: 6px;
-        text-align: left;
-        overflow: scroll;
+    }
+
+    .project-wrap img {
+        object-fit: contain;
+        height: 100%;
+        width: 100%;
+        opacity: 0.8;
+    }
+
+    .hidden {
+        border: none;
     }
 
     .techstack {
