--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -484,6 +484,9 @@ body {
     text-align: left;
     overflow: scroll;
   }
+  .project-wrap {
+    display: none;
+  }
   .techstack {
     display: block;
     margin: 2% 0 1% 0;
@@ -957,6 +960,9 @@ body {
     text-align: left;
     overflow: scroll;
   }
+  .project-wrap {
+    display: none;
+  }
   .techstack {
     display: block;
     margin: 2% 0 1% 0;
@@ -1423,6 +1429,9 @@ body {
     text-align: left;
     overflow: scroll;
   }
+  .project-wrap {
+    display: none;
+  }
   .techstack {
     display: block;
     margin: 2% 0 1% 0;
@@ -1578,13 +1587,13 @@ body {
     -webkit-box-pack: center;
         -ms-flex-pack: center;
             justify-content: center;
-    padding: 140px 0;
+    padding: 120px 0;
     scroll-snap-align: start;
     background-image: -webkit-gradient(linear, left top, left bottom, from(#f5f7fa), to(#fff));
     background-image: linear-gradient(180deg, #f5f7fa, #fff);
   }
   .page-section {
-    height: 938px;
+    height: 880px;
   }
   .last {
     height: 945px;
@@ -1602,7 +1611,7 @@ body {
     font-weight: 700;
     text-align: center;
     color: #0F2027;
-    margin-bottom: 25px;
+    margin-bottom: 40px;
   }
   .profile {
     display: -webkit-box;
@@ -1626,7 +1635,6 @@ body {
             justify-content: space-between;
     width: 100%;
     height: 49.9%;
-    padding: 35px 0;
   }
   .profile-pic-container {
     display: -webkit-inline-box;
@@ -1691,7 +1699,6 @@ body {
     height: 100%;
     width: 30%;
     padding: 25px;
-    border: 1px solid #e1e1e1;
     border-radius: 6px;
   }
   .skills div {
@@ -1765,6 +1772,7 @@ body {
     border: solid 0.5px #e1e1e1;
     border-radius: 6px;
     text-align: left;
+    background-color: white;
     overflow: scroll;
   }
   .tab-content {
@@ -1806,19 +1814,6 @@ body {
     font-size: 1.1rem;
     font-weight: 400;
     text-align: right;
-  }
-  .slide-block {
-    margin-bottom: 6%;
-  }
-  .slide-block h5 {
-    font-weight: 700;
-    font-size: 1.3rem;
-    margin: 4% 0 2% 0;
-  }
-  .slide p {
-    font-weight: 100;
-    font-size: 1rem;
-    margin: 2% 0 1% 0;
   }
   .slide-block ul {
     margin: 2% 0 4% 0;
@@ -1897,6 +1892,7 @@ body {
     height: 100%;
   }
   .project-wrap {
+    position: relative;
     display: block;
     width: 32%;
     height: 47%;
@@ -1910,6 +1906,57 @@ body {
     width: 100%;
     opacity: 0.8;
   }
+  .projects-mobile {
+    display: none;
+  }
+  .project-info {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    visibility: hidden;
+    opacity: 0;
+  }
+  .back {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    background-color: white;
+    z-index: 2;
+    border-radius: 6px;
+  }
+  .project-info .slide-block {
+    z-index: 5;
+    position: absolute;
+    top: 0;
+    left: 0;
+  }
+  .project-wrap:hover .project-info {
+    visibility: visible;
+    opacity: 1;
+    -webkit-animation: fade 1s;
+            animation: fade 1s;
+  }
+  .project-info .slide-block {
+    padding: 15px;
+  }
+  .slide-block h5 {
+    font-weight: 700;
+    font-size: 1.1rem;
+    margin: 4% 0 2% 0;
+  }
+  .slide-block p {
+    font-weight: 100;
+    font-size: 0.9rem;
+    margin: 2% 0 1% 0;
+  }
+  .slide-block a {
+    font-weight: 100;
+    font-size: 0.9rem;
+  }
   .hidden {
     border: none;
   }
@@ -1917,7 +1964,7 @@ body {
     display: block;
     margin: 2% 0 1% 0;
     font-weight: 500;
-    font-size: 1rem;
+    font-size: 0.9rem;
     font-style: italic;
   }
 }
