--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1903,14 +1903,15 @@ body {
 
     .tab-content p {
         font-weight: 100;
-        margin-top: 8px;
+        margin-top: 12px;
+        font-size: 0.9rem;
     }
 
     .ed-info {
         width: 49%;
         display: inline-block;
         vertical-align: top;
-        font-size: 1.1rem;
+        font-size: 1rem;
         font-weight: 400;
         text-align: left;
     }
@@ -1919,7 +1920,7 @@ body {
         width: 49%;
         display: inline-block;
         vertical-align: top;
-        font-size: 1.1rem;
+        font-size: 1rem;
         font-weight: 400;
         text-align: right;
     }
@@ -2037,11 +2038,14 @@ body {
         position: absolute;
         top: 0;
         left: 0;
-        background-color: white;
+        background-color: #0F2027;
+        color: white;
+        border-radius: 6px;
         width: 100%;
         height: 100%;
         opacity: 0;
         transition: opacity 0.3s linear;
+        text-align: center;
     }
 
     .project-wrap:hover .slide-block {
@@ -2052,28 +2056,50 @@ body {
         padding: 25px;
     }
 
-    .slide-block h5 {
-        font-weight: 900;
-        font-size: 1.1rem;
-        margin: 4% 0 5% 0;
+    .project-info .slide-block h5 {
+        margin-bottom: 5%;
+        text-decoration: underline;
+        font-size: 1.5rem;
     }
 
-    .slide-block p {
+    .slide-block h5 {
+        font-weight: 900;
+        font-size: 1.4rem;
+        margin: 4% 0 2% 0;
+    }
+
+    .slide-block .project-about {
         // position: absolute;
-        // bottom: 60px;
+        // top: 115px;
         font-weight: 100;
         font-size: 0.9rem;
         margin: 5% 0 1% 0;
+        text-align: justify;
     }
 
     .slide-block a {
         font-weight: 100;
         font-size: 0.9rem; 
+        background-color: rgb(255, 31, 115);
+        border: 1px solid rgb(255, 31, 115);
+        padding: 5px 10px;
+        border-radius: 6px;
+        color: white;
+    }
+
+    .slide-block a:hover {
+        position: relative; 
+        top: -5px;
+        padding-bottom: 5px;
+        text-decoration: none;
     }
 
     .view-on {
+        width: 100%;
         position: absolute;
-        bottom: 15px;
+        bottom: 12px;
+        left: 0;
+        text-align: center;
     }
 
     .hidden {
