navbar alignment fixed (hopefully)

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -150,6 +150,10 @@ body {
 .navbar-nav {
   width: 400px;
   height: 65px;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  margin: auto;
 }
 
 .navbar-collapse {
