--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -141,7 +141,7 @@ body {
   display: block;
   position: relative;
   height: 100%;
-  width: 1100px;
+  max-width: 1100px;
   z-index: 5;
   margin: auto;
   padding: 3px;
