--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -94,7 +94,6 @@ body {
 
 #goto-btn:hover {
   background-color: #08fdd8;
-  border-color: #08fdd8;
   color: #191919;
 }
 
@@ -305,12 +304,14 @@ body {
 
 .contact-block a {
   color: #fff;
+  -webkit-transition: all .3s;
+  transition: all .3s;
 }
 
 .contact-block a:hover {
   color: #08fdd8;
-  -webkit-transition: color 0.5s;
-  transition: color 0.5s;
+  -webkit-transform: scale(1.2);
+          transform: scale(1.2);
 }
 
 .skills-block {
@@ -594,16 +595,18 @@ body {
 .view-on a {
   font-weight: 100;
   font-size: 0.9rem;
-  background-color: #08fdd8;
   border: 1px solid #08fdd8;
   padding: 5px 10px;
   border-radius: 6px;
-  color: #222222;
+  color: #08fdd8;
+  text-decoration: none;
+  -webkit-transition: all .3s;
+  transition: all .3s;
 }
 
 .view-on a:hover {
-  padding-bottom: 5px;
-  text-decoration: none;
+  background-color: #08fdd8;
+  color: #222222;
 }
 
 .view-on {
