--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,6 +14,66 @@ body {
   margin: 0;
 }
 
+@-webkit-keyframes moveInRight {
+  0% {
+    opacity: 0;
+    -webkit-transform: translateX(10rem);
+            transform: translateX(10rem);
+  }
+  70% {
+    -webkit-transform: translateX(-1rem);
+            transform: translateX(-1rem);
+  }
+  100% {
+    opacity: 1;
+    -webkit-transform: translate(0);
+            transform: translate(0);
+  }
+}
+
+@keyframes moveInRight {
+  0% {
+    opacity: 0;
+    -webkit-transform: translateX(10rem);
+            transform: translateX(10rem);
+  }
+  70% {
+    -webkit-transform: translateX(-1rem);
+            transform: translateX(-1rem);
+  }
+  100% {
+    opacity: 1;
+    -webkit-transform: translate(0);
+            transform: translate(0);
+  }
+}
+
+@-webkit-keyframes moveInBottom {
+  0% {
+    opacity: 0;
+    -webkit-transform: translateY(3rem);
+            transform: translateY(3rem);
+  }
+  100% {
+    opacity: 1;
+    -webkit-transform: translate(0);
+            transform: translate(0);
+  }
+}
+
+@keyframes moveInBottom {
+  0% {
+    opacity: 0;
+    -webkit-transform: translateY(3rem);
+            transform: translateY(3rem);
+  }
+  100% {
+    opacity: 1;
+    -webkit-transform: translate(0);
+            transform: translate(0);
+  }
+}
+
 .active-link {
   color: #08fdd8 !important;
   -webkit-transition: color 0.5s;
@@ -63,6 +123,27 @@ body {
   margin-bottom: 10px;
 }
 
+.hello1 {
+  -webkit-animation: moveInRight .7s ease-out;
+          animation: moveInRight .7s ease-out;
+  -webkit-animation-fill-mode: backwards;
+          animation-fill-mode: backwards;
+}
+
+.hello2 {
+  -webkit-animation: moveInRight .7s ease-out .1s;
+          animation: moveInRight .7s ease-out .1s;
+  -webkit-animation-fill-mode: backwards;
+          animation-fill-mode: backwards;
+}
+
+.hello3 {
+  -webkit-animation: moveInRight .7s ease-out .2s;
+          animation: moveInRight .7s ease-out .2s;
+  -webkit-animation-fill-mode: backwards;
+          animation-fill-mode: backwards;
+}
+
 #goto-href {
   display: block;
   margin-top: 20px;
@@ -80,6 +161,10 @@ body {
   -webkit-transition: background-color 0.3s ease;
   transition: background-color 0.3s ease;
   cursor: pointer;
+  -webkit-animation: moveInBottom 0.5s ease-out .6s;
+          animation: moveInBottom 0.5s ease-out .6s;
+  -webkit-animation-fill-mode: backwards;
+          animation-fill-mode: backwards;
 }
 
 .intro-page a {
@@ -304,8 +389,8 @@ body {
 
 .contact-block a {
   color: #fff;
-  -webkit-transition: all .3s;
-  transition: all .3s;
+  -webkit-transition: all .2s;
+  transition: all .2s;
 }
 
 .contact-block a:hover {
