--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -92,6 +92,21 @@ body {
   overflow: hidden;
 }
 
+.banner {
+  position: fixed;
+  top: 0;
+  padding: 10px;
+  background-color: #ebebeb;
+  width: 100%;
+  height: 80px;
+  font-size: 16px;
+  text-align: center;
+}
+
+.banner div {
+  margin: 5px 0;
+}
+
 .intro-page {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -209,11 +224,11 @@ body {
 
 .fixed {
   position: fixed;
+  top: 80px !important;
 }
 
 .navigation {
   left: 0px;
-  top: 0;
   right: 0px;
   z-index: 1500;
   max-height: 65px;
