--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -58,6 +58,21 @@ body {
     overflow: hidden;
 }
 
+.banner {
+  position:  fixed;
+  top: 0;
+  padding: 10px;
+  background-color: #ebebeb;
+  width: 100%;
+  height:  80px;
+  font-size: 16px;
+
+  text-align: center;
+  div  {
+    margin: 5px 0;
+  }
+}
+
 .intro-page {
     display: flex;
     flex-direction: column;
@@ -156,12 +171,13 @@ body {
 
 .fixed {
     position: fixed;
+    top: 80px !important;
 }
 
 .navigation {
     // position: fixed;
     left: 0px;
-    top: 0;
+    // top: 0;
     right: 0px;
     z-index: 1500;
     max-height: 65px;
